@@ -6,6 +6,9 @@ Cacti CHANGELOG
 -bug#0001094: Filtering Broken in Data Sources
 -bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
 -feature: Add additional logging to Graph Xport
+-feature: Add rows dropdown to deivces
+-feature: Add device_id and event count to devices
+-feature: Add local_xx_ids to graphs and data sources pages
 
 0.8.7a
 -bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
