@@ -8,6 +8,7 @@ Cacti CHANGELOG
 -feature: Add additional logging to Graph Xport
 -feature: Add rows dropdown to deivces
 -feature: Add device_id and event count to devices
+-feature: Add local_xx_ids to graphs and data sources pages
 
 0.8.7a
 -bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
